# claude-nothing

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml
src/claude_nothing/: __init__.py  app.py  content.py  main.py  performance.py  styles.py  widgets.py
