[project]
name = "claude-nothing"
version = "0.1.0"
description = "A fake Claude Code session that looks incredibly productive but does absolutely nothing."
readme = "README.md"
authors = [
    { name = "atasoglu", email = "ahmetatasoglu98@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
claude-nothing = "claude_nothing:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
